--- a/style.css
+++ b/style.css
@@ -96,6 +96,17 @@ img{
     }
 }
 
+main, section, .project-card{
+    opacity: 0;
+    transform: translateX(10rem);
+}
+
+.show-section{
+    opacity: 1;
+    transform: translateX(0);
+    transition: .5s;
+}
+
 /* header ----------------------------- */
 header, main, #link-container, #info-container{
     display: flex;
@@ -175,8 +186,83 @@ p{
 /* about me --------------------------- */
 
 #about-me{
+    background-color: var(--preto-1);
     font-size: 1.8rem;
     text-align: center;
+}
+
+#about-me-container{
+    margin: 0 auto;
+    grid-template-columns: max-content 40vw;
+    grid-gap: 0 15vw;
+    grid-template-areas: 
+    "perfil h2"
+    "perfil p"
+    "perfil div";
+}
+
+#perfil{
+    clip-path: circle();
+    width: 25vw;
+    grid-area: perfil;
+    animation: float 4s infinite;
+}
+
+#about-me h2{
+    grid-area: h2;
+}
+
+#about-me-container p{
+    margin-bottom: 2rem;
+    width: 100%;
+    grid-area: p;
+}
+#about-me-container div{
+    display: flex;
+    grid-area: div;
+    width: 100%;
+}
+
+#github, #linkedin{
+    align-self: center;
+    display: block;
+    padding: 1rem 2rem;
+    border: 2px solid var(--preto-3);
+    width: 40%;
+    background-color: none;
+}
+
+#github:hover::after, #linkedin:hover::after{
+    content: '';
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 2px;
+    background-color: var(--verde);
+    transition: .3s;
+    animation: hover .5s;
+}
+
+@keyframes hover {
+    0%{width: 0%;}
+    100%{width: 100%;}
+}
+
+@keyframes float{
+    0%, 100%{
+        transform: translateY(0rem);
+    }
+    50%{
+        transform: translateY(-2rem);
+    }
+}
+
+#github::after{
+    width: 100%;
+}
+
+#github{
+    margin-right: 10%;
 }
 
 h2{
@@ -204,40 +290,73 @@ h2{
 
 /* projects --------------------------- */
 
-#info-container, #projects-container, #services-container, #skills-container{
+#info-container, #about-me-container, #projects-container, #projects-container-main, #services-container, #skills-container{
     display: grid;
 }
 
 #projects-container, #services-container{
     margin: 0 auto;
-    max-width: 98.8rem;
     font-size: 1.8rem;
     grid-gap: 1rem 2rem;
     grid-template-columns: repeat(3, 1fr);
 }
 
-#projects-container img{
-    width: 100%;
+#projects-container-main{
+    grid-gap: 1rem 2rem;
+    grid-row: 1;
+    grid-column: 1/4;
+    grid-template-columns: 1fr 1fr;
 }
 
-#projects-container div{
-    min-width: 25rem;
-    max-width: 33rem;
-    height: 25rem;
+.project-card div{
+    height: auto;
+    display: grid;
+    grid-template: 1fr 1fr/ 2fr 1fr;
+}
+
+.project-card h5{
+    align-self: center;
+    grid-column: 1/3;
+    font-size: 2rem;
+    margin: 1rem 0;
+}
+
+.project-card{
     padding: 2rem;
     background-color: var(--preto-2);
 }
 
-h5{
-    font-size: 2rem;
-    margin-top: 2rem;
+.project-card img{
+    width: 100%;
+}
+
+.project-card p, h5{
+    align-self: center;
+}
+
+#projects-container > .project-card{
+    height: 31rem;
+}
+
+#projects-container > .project-card .details{
+    margin-top: 1rem;
+    display: block;
+    text-align: center;
+}
+
+.details{
+    justify-self: end;
+    background-color: var(--verde);
+    color: var(--preto-2);
+    font-weight: 800;
+    padding: 1rem 2rem;
 }
 
 #empty{
-    padding: 2rem;
-    height: 10rem;
+    width: 10rem;
+    margin: 0 auto;
+    padding-bottom: 2rem;
 }
-
 /* services --------------------------- */
 
 #service-card, #services img{
@@ -294,7 +413,16 @@ footer span{
 /* responsive ------------------------- */
 
 @media(max-width:990px){
-    #projects-container, #skills-container{
+    #projects-container-main{
+        grid-template-columns: 1fr;
+        grid-column: 1/3;
+    }
+
+    #projects-container{
+        grid-template-columns: 1fr 1fr;
+    }
+
+    #skills-container{
         grid-template: 1fr 1fr / repeat(2, 1fr);
         width: max-content;
     }
@@ -305,6 +433,7 @@ footer span{
 }
 
 @media(max-width:850px){
+
     main img{
         display: none;
     }
@@ -324,25 +453,74 @@ footer span{
     }
 
     #projects, #services{
-        width: 100%;
-        margin: 0;
+        width: 90%;
+        margin: 0 auto;
     }
 
     #services-container{
         margin: 0 10vw;
     }
+
+    #about-me-container p{
+        font-size: 1.5vw;
+    }
 }
 
 @media(max-width:740px){
+
+    #about-me{
+        opacity: 1;
+        transform: translateX(0);
+        transition: .5s;
+    }
+
+    #about-me-container{
+        display: inline;
+    }
+
+    #perfil{
+        margin: 0 auto;
+    }
+
+    #github, #linkedin{
+        width: 100%;
+    }
+
+    #about-me h2, #about-me p{
+        width: 80vw;
+    }
+
+    #about-me p{
+        font-size: 1.2rem;
+    }
 
     #info-container{
         grid-template-columns: 1fr 1fr;
     }
 
+    #info-container div, #info-container p{
+        width: 40vw;
+    }
+
     #projects-container{
-        grid-template-columns: 59.2rem;
+        grid-template-columns: 1fr;
         width: 80%;
         justify-content: center;
+    }
+
+    #projects-container-main{
+        grid-column: 1/2;
+    }
+
+    #projects-container-main .details{
+        grid-row: 3;
+        width: 100%;
+        text-align: center;
+        margin-top: 1rem;
+    }
+
+    #projects-container-main .project-card div{
+        grid-template-columns: 1fr;
     }
 
     .project-card{
@@ -382,7 +560,12 @@ footer span{
     }
 
     #info-container div{
+        width: 100%;
         margin: 4rem 0 0;
+    }
+
+    #info-container p{
+        width: 100%;
     }
 
     footer{
